# Spotipie

./: README.md  docker-compose.yml  package-lock.json
spotipie/: .eslintrc.json  .gitignore  Dockerfile  README.md  index.html  karma.conf.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
spotipie-deprecated/: angular.json  package-lock.json  package.json
spotipie-deprecated/e2e/src/: app.e2e-spec.ts
spotipie-deprecated/src/: index.html
spotipie-deprecated/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  autorize-guard.guard.spec.ts
spotipie-front/: README.md  dev.env  index.html  package-lock.json  package.json
spotipie-front/src/: App.vue  main.ts
spotipie-front/src/adapter/: AuthorizationAdapter.ts  HttpHelper.ts  UserAdapter.ts
spotipie-front/src/assets/: main.css
spotipie-front/src/interfaces/: AuthorizationPort.ts  Filter.ts  Song.ts  User.ts  UserPort.ts
spotipie-front/src/router/: index.ts
spotipie-front/src/stores/: userAuth.ts
spotipie-front/src/views/: HomeView.vue  LoginView.vue
spotipie/coverage/: clover.xml  coverage-final.json  index.html
spotipie/coverage/config/: AxiosHttp.ts.html  index.html
spotipie/coverage/domain/: Song.ts.html  index.html
spotipie/coverage/src/: App.tsx.html  index.html  main.tsx.html
spotipie/src/: App.css  App.tsx  main.tsx  styles.css
spotipie/src-tauri/: Cargo.toml  tauri.conf.json
spotipie/src-tauri/src/: main.rs  spotify_api.rs
spotipie/src/app/: app-routing.module.ts  (+4 more)
spotipieBack/: .gitignore  Dockerfile  package-lock.json  pom.xml
(+321 files in other folders)
